# rust_hdl

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE.txt  README.md  clippy.toml
ast_syntax_gen/: Cargo.toml  README.md  concurrent_statements.rs  declarations.rs  design_entities.rs  design_units.rs  expression.rs  mod.rs  names.rs  node_kind.rs  psl.rs  scope_and_visibility.rs  sequential_statements.rs  specifications.rs  subprograms_packages.rs  types.rs
ast_syntax_gen/doc/: name_no_left_recursion.txt
ast_syntax_gen/src/: main.rs  node.rs  serialize.rs  serialized_to_model.rs  token.rs
ast_syntax_gen/src/syntax_definitions/: concurrent_statements.yaml  declarations.yaml  design_entities.yaml  design_units.yaml  expression.yaml  names.yaml  productions.txt  psl.yaml  read_productions.py  scope_and_visibility.yaml  sequential_statements.yaml  specifications.yaml  subprograms_packages.yaml  types.yaml
ast_syntax_gen/tools/: read_productions.py
vhdl_lang/: Cargo.toml
vhdl_lang/benches/: benchmark.rs
vhdl_lang/src/: analysis.rs  api.rs  ast.rs  completion.rs  config.rs  data.rs  hierarchy.rs  lib.rs  lint.rs  main.rs  named_entity.rs  project.rs  syntax.rs  version.rs
vhdl_lang/src/analysis/: analyze.rs  assignment.rs  association.rs  completion.rs  concurrent.rs  declarative.rs  design_unit.rs  expression.rs  formal_region.rs  implicits.rs  literals.rs  lock.rs  named_entity.rs  names.rs  overloaded.rs  package_instance.rs  range.rs  region.rs  root.rs  scope.rs  semantic.rs  sequential.rs  standard.rs  static_expression.rs  subprogram.rs  target.rs  types.rs  visibility.rs
vhdl_lang/src/ast/: any_design_unit.rs  ast_span.rs  display.rs  name_util.rs  search.rs  token_range.rs  util.rs  visitor.rs
vhdl_lang/src/completion/: attributes.rs  entity_instantiation.rs  generic.rs  libraries.rs  map_aspect.rs  region.rs  selected.rs  tokenizer.rs
vhdl_lang/src/config/: case.rs  mod.rs
vhdl_lang/src/data/: contents.rs  diagnostic.rs  error_codes.rs  latin_1.rs  message.rs  source.rs  symbol_table.rs
vhdl_lang/src/formatting/: architecture.rs  buffer.rs  concurrent_statement.rs  configuration.rs  constraint.rs  context.rs  declaration.rs  design.rs  entity.rs  expression.rs  interface.rs  mod.rs  name.rs  sequential_statement.rs  statement.rs  subprogram.rs  token.rs
vhdl_lang/src/lint/: dead_code.rs  sensitivity_list.rs
vhdl_lang/src/named_entity/: arena.rs  attribute.rs  design.rs  file.rs  formal_region.rs  object.rs  overloaded.rs  region.rs  types.rs  visibility.rs
vhdl_lang/src/syntax/: alias_declaration.rs  attributes.rs  common.rs  component_declaration.rs  concurrent_statement.rs  configuration.rs  context.rs  declarative_part.rs  design_unit.rs  disconnection.rs  expression.rs  interface_declaration.rs  names.rs  object_declaration.rs  parse_context.rs  parser.rs  range.rs  recover.rs  separated_list.rs  sequential_statement.rs  subprogram.rs  subtype_indication.rs  test.rs  tokens.rs  type_declaration.rs  view.rs  waveform.rs
vhdl_lang/tests/: format_example_project.rs  integration_tests.rs
vhdl_lang/tests/unused_declarations/: my_entity.vhd  vhdl_ls.toml
vhdl_lang_macros/: Cargo.toml
vhdl_lang_macros/src/: lib.rs  token_span_attribute.rs  token_span_derive.rs
vhdl_lint/: Cargo.toml
vhdl_lint/src/: diagnostic.rs  main.rs  render.rs  reporting.rs  source.rs  syntax_err.rs
vhdl_ls/: Cargo.toml
vhdl_ls/src/: document_symbol.rs  lib.rs  main.rs  requests.rs  rpc_channel.rs  stdio_server.rs  vhdl_server.rs
vhdl_ls/src/requests/: document_symbol.rs
vhdl_ls/src/vhdl_server/: completion.rs  diagnostics.rs  hierarchy.rs  lifecycle.rs  rename.rs  semantic_tokens.rs  text_document.rs  workspace.rs
vhdl_parser/: Cargo.toml
vhdl_parser/scripts/: generate_visitor.py
vhdl_parser/src/: alias_declaration.rs  analysis.rs  ast.rs  attributes.rs  common.rs  component_declaration.rs  concurrent_statement.rs  config.rs  configuration.rs  contents.rs  context.rs  cursor.rs  data.rs  declarative_part.rs  declarative_region.rs  design_unit.rs  diagnostic.rs  expression.rs  interface_declaration.rs  latin_1.rs  lib.rs  library.rs  main.rs  message.rs  names.rs  object_declaration.rs  parser.rs  project.rs  range.rs  semantic.rs  sequential_statement.rs  source.rs  subprogram.rs  subtype_indication.rs  symbol_table.rs  syntax.rs  test_util.rs  tokenizer.rs  tokenstream.rs  type_declaration.rs  (+1 more)
vhdl_parser/src/analysis/: analyze.rs  concurrent.rs  declarative.rs  declarative_region.rs  design_unit.rs  library.rs  lock.rs  mod.rs  pending.rs  region.rs  root.rs  semantic.rs  sequential.rs
vhdl_parser/src/ast/: any_design_unit.rs  display.rs  has_ident.rs  mod.rs  name.rs  name_util.rs  search.rs
vhdl_parser/src/data/: contents.rs  diagnostic.rs  source.rs  symbol_table.rs
vhdl_parser/src/processing/: listener.rs  mod.rs  visitor.rs
vhdl_parser/src/syntax/: alias_declaration.rs  common.rs  component_declaration.rs  concurrent_statement.rs  design_unit.rs  interface_declaration.rs  object_declaration.rs  parser.rs  test.rs  type_declaration.rs  waveform.rs
vhdl_syntax/: Cargo.toml  README.md
vhdl_syntax/doc/: vhdl_syntax.txt
vhdl_syntax/examples/: doc_extraction.rs  empty_entity_builder.rs  import_sorting.rs  linting.rs  name_changing.rs  source_refactoring.rs  testbench_generation.rs
vhdl_syntax/src/: builder.rs  encoding.rs  latin_1.rs  lib.rs  main.rs  source_location.rs  standard.rs  token_interning.rs
vhdl_syntax/src/fmt/: encoding.rs  impls.rs  latin1.rs  mod.rs  utf8.rs  write.rs
vhdl_syntax/src/parser/: builder.rs  design.rs  diagnostics.rs  entity.rs  error.rs  error_recovery.rs  identifier.rs  list.rs  mod.rs  statements.rs  test_utils.rs  util.rs
vhdl_syntax/src/serde/: flags.rs  mod.rs  serializable.rs  serialize_impl.rs  (+1 more)
vhdl_syntax/tests/: builder_tests.rs  integration_test.rs
xtask/: Cargo.toml  README.md
xtask/doc/: name_no_left_recursion.txt  productions.txt
xtask/src/: main.rs
xtask/tools/: productions.txt  productions_new.txt  read_productions.py  yaml_to_productions.py
(+620 files in other folders)
