# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2018, Olof Kraigher olof.kraigher@gmail.com

[workspace]
resolver = "2"
members = ["vhdl_lang_macros", "vhdl_lang", "vhdl_ls"]

[workspace.package]
version = "0.85.0"
authors = ["Olof Kraigher <olof.kraigher@gmail.com>"]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/VHDL-LS/rust_hdl"
readme = "README.md"
