# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2018, Olof Kraigher olof.kraigher@gmail.com

[workspace]
resolver = "2"
members = [
    "vhdl_lang_macros",
    "vhdl_lang",
    "vhdl_ls",
    "vhdl_syntax",
    "ast_syntax_gen",
    "vhdl-dump-ast",
]

# By default, do not include members that are only needed at build-time
# e.g., (vhdl_lang_macros, ast_syntax_gen)
default-members = ["vhdl_lang", "vhdl_ls", "vhdl_syntax", "vhdl-dump-ast"]
