# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2018, Olof Kraigher olof.kraigher@gmail.com

[package]
name = "vhdl_lang"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "VHDL Language Frontend"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
vhdl_lang_macros = { version = "^0.85.0", path = "../vhdl_lang_macros" }
pad = "0.1.6"
fnv = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8.22"
glob = "0.3.2"
dirs = "6.0.0"
rayon = "1"
parking_lot = "0.12.3"
dunce = "1"
pinned_vec = "0.1.1"
itertools = "0.14.0"
subst = "0.3.8"
strum = { version = "0.27.1", features = ["derive"] }
enum-map = "2.7.3"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
assert_matches = "1"
brunch = "0.10"
assert_cmd = "2.0.14"
predicates = "3.1.0"

[[bench]]
name = "benchmark"
harness = false

[features]
default = []
