# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2018, Olof Kraigher olof.kraigher@gmail.com

[package]
name = "vhdl_lang"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "VHDL Language Frontend"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
vhdl_lang_macros = { version = "^0.86.0", path = "../vhdl_lang_macros" }
pad.workspace = true
fnv.workspace = true
clap.workspace = true
toml.workspace = true
glob.workspace = true
dirs.workspace = true
rayon.workspace = true
parking_lot.workspace = true
dunce.workspace = true
pinned_vec.workspace = true
itertools.workspace = true
subst.workspace = true
strum.workspace = true
enum-map.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
assert_matches.workspace = true
brunch.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[[bench]]
name = "benchmark"
harness = false

[features]
default = []
