# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2018, Olof Kraigher olof.kraigher@gmail.com

[package]
name = "vhdl_lang_macros"
version = "0.83.1"
authors = ["Olof Kraigher <olof.kraigher@gmail.com>"]
license = "MPL-2.0"
description = "VHDL Language Frontend - Macros"
repository = "https://github.com/kraigher/rust_hdl"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
