[package]
name = "vhdl_lint"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anstream = "0.6"
ariadne = "0.6.0"
clap = { workspace = true, features = ["derive"] }
vhdl_syntax = { version = "0.1.0", path = "../vhdl_syntax", default-features = false }
