[package]
name = "vhdl_lint"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
annotate-snippets = "0.12.16"
anstream = "0.6"
clap = { workspace = true, features = ["derive"] }
vhdl_syntax = { version = "0.1.0", path = "../vhdl_syntax", default-features = false }
