# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2018, Olof Kraigher olof.kraigher@gmail.com

[package]
name = "vhdl_ls"
version = "0.83.1"
authors = ["Olof Kraigher <olof.kraigher@gmail.com>"]
license = "MPL-2.0"
description = "VHDL Language Server"
repository = "https://github.com/kraigher/rust_hdl"
edition = "2021"
readme = "../README.md"

[dependencies]
vhdl_lang = { version = "^0.83.1", path = "../vhdl_lang" }
serde_json = "1"
serde = "1"
lsp-types = "^0.95.1"
fnv = "1"
log = "0"
env_logger = "0"
clap = { version = "4", features = ["derive"] }
lsp-server = "0"
fuzzy-matcher = "0.3.7"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
regex = "1.10.5"

[features]
default = []
