# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2018, Olof Kraigher olof.kraigher@gmail.com

[package]
name = "vhdl_ls"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "VHDL Language Server"
repository.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
vhdl_lang = { version = "^0.85.0", path = "../vhdl_lang" }
serde_json = "1"
serde = "1"
lsp-types = "^0.95.1"
fnv = "1"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4", features = ["derive"] }
lsp-server = "0.7.8"
fuzzy-matcher = "0.3.7"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
regex = "1.10.5"

[features]
default = []
