# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2018, Olof Kraigher olof.kraigher@gmail.com

[package]
name = "vhdl_ls"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "VHDL Language Server"
repository.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
vhdl_lang = { version = "^0.86.0", path = "../vhdl_lang" }
serde_json.workspace = true
serde.workspace = true
lsp-types.workspace = true
fnv.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
lsp-server.workspace = true
fuzzy-matcher.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
regex.workspace = true

[features]
default = []
