# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2018, Olof Kraigher olof.kraigher@gmail.com

[package]
name = "vhdl_parser"
version = "0.9.0"
authors = ["Olof Kraigher <olof.kraigher@gmail.com>"]
license = "MPL-2.0"
description = "VHDL Parser"
repository = "https://github.com/kraigher/rust_hdl"
edition = "2018"

[dependencies]
pad = "^0"
fnv = "^1"
clap = "^2"
toml = "^0"
glob = "^0"
dirs = "^2"
rayon = "^1.3"

[dev-dependencies]
tempfile = "^3"
pretty_assertions = "^0"
assert_matches = "^1"