[package]
name = "vhdl_syntax"
version = "0.1.0"
authors = ["Lukas Scheller"]
readme = "README.md"
description = "Library to work with VHDL files"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nonzero_ext = "0.3.0"
serde = { version = "1.0.228", optional = true, features = ["derive"]}

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.1"
insta = { version = "1.36", features = ["redactions"] }

[features]
serde = ["dep:serde"]
default = ["serde"]
