[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
quote = { workspace = true }
proc-macro2 = "1.0.86"
convert_case = "0.6.0"
serde_yml = "0.0.12"
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
clap = { workspace = true }
similar = "2"
anyhow = "1"

[dev-dependencies]
insta = "1"
